# qttester

./: .gitignore  CMakeLists.txt  MainForm.h  MainWindow.cpp  MainWindow.h  main.cpp  untitled.ui
